# ejemplos-2020

./: .gitignore  CMakeLists.txt
Clase1/: main1.cpp  main2.cpp
Clase13/: main.cpp  stock.cpp  stock.h
Clase3/: main1.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  main6.cpp  test2.txt  test3.txt  test4.martin  testagenda.txt  testagenda2.txt
Clase5/: ejPuntero.cpp
Clase6/: fibonacci.cpp  potencia.cpp
Clase7/: quicksort.cpp
Clase8/: Repaso2.1.cpp  Repaso2.cpp  ptr.cpp
Estructuras/Colas/: Queue.h  main.cpp
Estructuras/Lista/: lista.h  main.cpp
Estructuras/Pila/: Stack.h  main.cpp
Extra-Laberinto/: LaberintoSolver.cpp  main.cpp
Lista/: LinkedList.cpp  LinkedList.h  Node.h  main.cpp
ejAuto/: Auto.cpp  Auto.h  Ball.cpp  Ball.h  Bolitas.cpp  ejMapa.cpp  main3.cpp
ejPlataformer/: Arreglo.cpp  Arreglo.h  Mapa.cpp  Mapa.h  Player.cpp  Player.h  Proyectil.cpp  Proyectil.h  ejPlataformer.cpp  mapa.txt
